Add demo videos to HTML with styling

--- a/index.css
+++ b/index.css
@@ -235,11 +235,24 @@ ul.project-tech {
   color: #b21f66;
 }
 
+#budding-more-info {
+  display: flex;
+}
+
 .mobile-demo-card {
-  width: 350px;
-  height: 520px;
   margin-left: 2ch;
   margin-bottom: 4ch;
+}
+
+.mobile-video {
+  display: flex;
+  height: 50%;
+  width: 45%;
+  box-shadow: -0.4rem -0.4rem 2rem 0 #949494;
+  border-radius: 0.5rem;
+  margin-bottom: 4ch;
+  margin-left: 2ch;
+  align-self: center;
 }
 
 #budding-more-info {
@@ -255,8 +268,13 @@ ul.project-tech {
 }
 
 .desktop-demo-card {
-  height: 500px;
   margin: 4ch 1ch;
+}
+
+.desktop-video {
+  width: 100%;
+  box-shadow: -0.4rem -0.4rem 2rem 0 #949494;
+  border-radius: 0.5rem;
 }
 
 .project-links {
@@ -416,6 +434,11 @@ footer > p {
   text-align: center;
 }
 
+footer > p > a {
+  display: inline;
+  text-decoration: underline;
+}
+
 #scroll-top-button {
   display: none;
 }
@@ -568,8 +591,11 @@ footer > p {
     text-align: center;
   }
 
-  .mobile-demo-card {
-    width: 90%;
+  .mobile-video {
+    width: 50vw;
+    margin: auto;
+    margin-top: 4ch;
+    margin-bottom: 4ch;
   }
 
   .desktop-demo-card {
