--- a/index.css
+++ b/index.css
@@ -279,6 +279,39 @@ ul.project-tech {
   justify-content: space-around;
 }
 
+/* Main area - Blog */
+
+#blog > section > .articles {
+  margin-top: 50px;
+}
+
+.articles {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 30ch;
+  width: 110%;
+  grid-gap: 3%;
+}
+
+.article-card {
+  padding: 10%;
+  display: inline-block;
+  position: relative;
+}
+
+.article-card > a > h3 {
+  font-size: 1.8rem;
+}
+
+.article-card > p {
+  position: absolute;
+  bottom: 0;
+  font-size: 1.4rem;
+  text-align: left;
+  padding-right: 10%;
+  padding-bottom: 4ch;
+}
+
 /* Main area - Contact */
 
 .contact-grid {
@@ -440,7 +473,20 @@ footer > p > a {
   display: none;
 }
 
+@media (max-width: 1050px) {
+  .articles {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    grid-gap: 2ch;
+  }
+}
+
 @media (max-width: 950px) {
+  .articles {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    grid-gap: 2ch;
+  }
   /*Global styles*/
   html {
     padding: 0;
@@ -678,5 +724,16 @@ footer > p > a {
 
   #scroll-top-button:hover {
     background-color: #b21f66;
+  }
+}
+
+@media (max-width: 400px) {
+  .articles {
+    grid-template-columns: 1fr;
+  }
+
+  .article-card {
+    width: 70%;
+    margin: 0 auto;
   }
 }
