--- a/index.css
+++ b/index.css
@@ -135,6 +135,10 @@ h4 {
 
 /* Main area - About */
 
+.photo-small-screen {
+  display: none;
+}
+
 .blurb {
   display: none;
   width: 90%;
@@ -473,20 +477,24 @@ footer > p > a {
   display: none;
 }
 
+/* MEDIA QUERIES */
+
 @media (max-width: 1050px) {
+  /* Main  area - Blog */
   .articles {
     grid-template-columns: 1fr 1fr;
     width: 100%;
     grid-gap: 2ch;
+  }
+
+  /* Main area - Contact */
+
+  .contact-grid {
+    grid-gap: 20%;
   }
 }
 
 @media (max-width: 950px) {
-  .articles {
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-    grid-gap: 2ch;
-  }
   /*Global styles*/
   html {
     padding: 0;
@@ -538,10 +546,12 @@ footer > p > a {
     margin-left: 0px;
     flex-wrap: wrap;
     flex: 1 0 auto;
+    margin-top: 1ch;
   }
 
   nav > a {
-    margin-bottom: 2%;
+    display: inline;
+    padding: 0 2ch;
   }
 
   #side-section {
@@ -549,16 +559,8 @@ footer > p > a {
     position: static;
     grid-area: side-section;
     font-size: 1.8rem;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
     width: 100vw;
     padding: 0;
-  }
-
-  nav > a {
-    display: block;
-    width: auto;
-    border: none;
   }
 
   nav > a:hover {
@@ -566,15 +568,19 @@ footer > p > a {
   }
 
   .focused-section-link {
-    width: auto;
     border: none;
   }
 
   .photo {
-    padding-top: 10%;
+    display: none;
+  }
+
+  .photo-small-screen {
+    display: block;
+    padding: 5% 0;
     width: 20%;
     height: 20%;
-    margin: 0;
+    margin: auto;
   }
 
   /* Main area - About */
@@ -594,7 +600,6 @@ footer > p > a {
 
   p.blurb {
     padding: 0;
-    padding-bottom: 10vh;
     width: auto;
   }
 
@@ -649,10 +654,22 @@ footer > p > a {
     height: 30vh;
   }
 
+  /* Main area - Blog */
+
+  .articles {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    grid-gap: 2ch;
+  }
+
   /* Main area - Contacts */
 
   .contact-grid {
     display: block;
+  }
+
+  .contact-grid > div > p {
+    text-align: center;
   }
 
   .social-logos {
@@ -666,11 +683,10 @@ footer > p > a {
   }
 
   form {
-    width: 80%;
+    width: 60%;
   }
 
   form.card {
-    width: 70%;
     margin: 0;
     margin-right: 0;
     margin-top: 0;
@@ -728,6 +744,7 @@ footer > p > a {
 }
 
 @media (max-width: 400px) {
+  /* Main area - Blog */
   .articles {
     grid-template-columns: 1fr;
   }
@@ -735,5 +752,41 @@ footer > p > a {
   .article-card {
     width: 70%;
     margin: 0 auto;
+  }
+
+  /* Header and navigation */
+
+  nav > a {
+    margin-bottom: 2%;
+  }
+
+  #side-section {
+    flex-wrap: wrap;
+  }
+
+  nav > a {
+    display: block;
+    width: auto;
+    border: none;
+  }
+
+  .focused-section-link {
+    width: auto;
+  }
+
+  /* Main area - About */
+
+  .photo-small-screen {
+    width: 40%;
+  }
+
+  /* Main area - Contact */
+
+  form {
+    width: 70%;
+  }
+
+  input {
+    width: 90%;
   }
 }
