--- a/index.css
+++ b/index.css
@@ -16,7 +16,6 @@ html {
 }
 
 body {
-  font-size: 16px;
   font-size: 1.8rem;
   margin-bottom: -10px;
 }
@@ -46,7 +45,7 @@ a:visited {
 
 a:hover,
 a:focus {
-  color: #b21f66;
+  color: #cc2014;
   text-decoration: underline;
 }
 
@@ -101,9 +100,9 @@ nav {
 }
 
 nav > a {
-  border-bottom: 3px solid transparent;
+  border-bottom: 0.3rem solid transparent;
   margin-bottom: 10%;
-  letter-spacing: 1px;
+  letter-spacing: 0.1rem;
   width: 12rem;
   color: lightgoldenrodyellow;
 }
@@ -126,13 +125,13 @@ nav > a:focus {
 
 /* Main area */
 
-#float-social-logos {
+#fixed-social-logos {
   position: fixed;
   right: 0;
   top: 20%;
 }
 
-#float-social-logos > a {
+#fixed-social-logos > a {
   display: block;
   margin: 5ch;
 }
@@ -162,7 +161,7 @@ h4 {
 
 .line {
   border-bottom: 0.5rem solid #eb7100;
-  width: 300px;
+  width: 30rem;
 }
 
 /* Main area - About */
@@ -187,7 +186,7 @@ h3.skills-heading {
 
 h3.skills-heading:before {
   content: "\25BA";
-  color: #03a090;
+  color: #eb4034;
   padding-right: 1ch;
   padding-left: 1.5ch;
   display: inline-block;
@@ -251,7 +250,7 @@ ul.project-tech li {
 }
 
 ul.project-tech {
-  margin-top: -25px;
+  margin-top: -2.5rem;
   margin-left: -40px;
 }
 
@@ -277,7 +276,7 @@ ul.project-tech {
 
 .show-more-button:hover,
 .show-more-button:focus {
-  color: #b21f66;
+  color: #cc2014;
 }
 
 #budding-more-info {
@@ -327,7 +326,7 @@ ul.project-tech {
 /* Main area - Blog */
 
 #blog > section > .articles {
-  margin-top: 50px;
+  margin-top: 5rem;
 }
 
 .articles {
@@ -366,18 +365,10 @@ ul.project-tech {
 
 .logo {
   height: 5rem;
-  margin-top: -60px;
+  margin-top: -6rem;
   opacity: 0;
   display: inline-block;
   position: relative;
-}
-
-.twitter-border {
-  height: 301px;
-  width: 249px;
-  padding: 1px;
-  border-radius: 2%;
-  box-shadow: 0px 0px 2rem 0.4rem #949494;
 }
 
 form {
@@ -396,12 +387,6 @@ form {
   overflow: hidden;
 }
 
-.contact-form-heading {
-  text-align: center;
-  margin-top: -5px;
-  font-family: "Asap", sans-serif;
-}
-
 label {
   font-family: "Asap", sans-serif;
   height: 2rem;
@@ -416,7 +401,7 @@ input {
   color: #381460;
   width: 70%;
   background-color: #fafad2;
-  border: 1px solid #381460;
+  border: 0.1rem solid #381460;
   border-radius: 0.5rem;
 }
 
@@ -427,10 +412,11 @@ textarea {
   resize: none;
   padding: 0.5em;
   background-color: lightgoldenrodyellow;
-  border: 1px solid #381460;
+  border: 0.1rem solid #381460;
   width: 100%;
   height: 10em;
   box-sizing: border-box;
+  border-radius: 0.5rem;
 }
 
 .invalid {
@@ -446,8 +432,8 @@ textarea {
 }
 
 form button {
-  background-color: #03a090;
-  padding: 20px;
+  background-color: #381460;
+  padding: 2rem;
   font-size: 2rem;
   border-radius: 2rem;
   font-family: "Asap", sans-serif;
@@ -471,7 +457,7 @@ select:-webkit-autofill:focus {
 
 form button:hover,
 form button:focus {
-  background-color: #b21f66;
+  background-color: #cc2014;
 }
 
 /* Footer */
@@ -510,246 +496,218 @@ footer > p > a {
     width: 100%;
     grid-gap: 2ch;
   }
-
-  
-
 }
 
-  @media (max-width: 950px) {
-    /*Global styles*/
-    html {
-      padding: 0;
-    }
+@media (max-width: 950px) {
+  /*Global styles*/
+  html {
+    padding: 0;
+  }
 
-    .line {
-      margin: auto;
-    }
+  .line {
+    margin: auto;
+  }
 
-    /* Page layout */
-    #wrapper {
-      position: absolute;
-      width: auto;
-      overflow-x: hidden;
-      margin: 0;
-      display: grid;
-      grid-template-columns: 100%;
-      grid-auto-rows: max-content;
-      grid-gap: 0;
-      grid-template-areas: "side-section" "main";
-      margin-bottom: -10px;
-      padding: 0;
-    }
+  /* Page layout */
+  #wrapper {
+    position: absolute;
+    width: auto;
+    overflow-x: hidden;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-auto-rows: max-content;
+    grid-gap: 0;
+    grid-template-areas: "side-section" "main";
+    margin-bottom: -10px;
+    padding: 0;
+  }
 
-    main {
-      grid-area: main;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+  main {
+    grid-area: main;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-    #bod {
-      padding-right: 0;
-      width: 90%;
-      padding-top: 0;
-    }
+  #bod {
+    padding-right: 0;
+    width: 90%;
+    padding-top: 0;
+  }
 
-    /* Header and navigation */
+  /* Header and navigation */
 
-    header {
-      background-color: #c7b0de;
-      margin-top: -10px;
-    }
+  #side-section {
+    display: flex;
+    position: static;
+    grid-area: side-section;
+    font-size: 1.8rem;
+    width: 101%;
+    padding: 0;
+    border-right: 0;
+    border-bottom: 2.5rem solid #ff7b00;
+  }
 
-    #side-section {
-      display: flex;
-      position: static;
-      grid-area: side-section;
-      font-size: 1.8rem;
-      width: 101%;
-      padding: 0;
-      border-right: 0;
-      border-bottom: 2.5rem solid #ff7b00;
-    }
+  nav {
+    width: 100%;
+    padding: 1ch 0;
+    text-align: center;
+    margin-left: 0px;
+    flex-wrap: wrap;
+    flex: 1 0 auto;
+    margin-top: 1ch;
+  }
 
-    nav {
-      width: 100%;
-      padding: 1ch 0;
-      text-align: center;
-      margin-left: 0px;
-      flex-wrap: wrap;
-      flex: 1 0 auto;
-      margin-top: 1ch;
-    }
+  nav > a {
+    display: inline;
+    padding: 1ch 2ch;
+  }
 
-    nav > a {
-      display: inline;
-      padding: 1ch 2ch;
-    }
+  nav > a:hover,
+  nav > a:focus {
+    background-color: #fefefa;
+  }
 
-    nav > a:hover,
-    nav > a:focus {
-      background-color: #fefefa;
-    }
+  .focused-section-link {
+    border: none;
+  }
 
-    .focused-section-link {
-      border: none;
-    }
+  .photo {
+    display: none;
+  }
 
-    .photo {
-      display: none;
-    }
+  .photo-small-screen {
+    display: block;
+    padding: 5% 0;
+    width: 20%;
+    height: 20%;
+    margin: auto;
+  }
 
-    .photo-small-screen {
-      display: block;
-      padding: 5% 0;
-      width: 20%;
-      height: 20%;
-      margin: auto;
-    }
+  /* Main area - About */
 
-    /* Main area - About */
+  div#about > section {
+    margin-top: 2ch;
+  }
 
-    div#about > section {
-      margin-top: 2ch;
-    }
+  h1 {
+    margin-top: 0;
+  }
 
-    h1 {
-      margin-top: 0;
-    }
+  h1,
+  h2 {
+    text-align: center;
+  }
 
-    h1,
-    h2 {
-      text-align: center;
-    }
+  p.blurb {
+    padding: 0;
+    width: auto;
+  }
 
-    p.blurb {
-      padding: 0;
-      width: auto;
-    }
+  /* Main area - Skills and Experience */
 
-    /* Main area - Skills and Experience */
+  h3.skills-heading {
+    text-indent: -1.5em;
+    margin-left: 2em;
+  }
 
-    h3.skills-heading {
-      text-indent: -1.5em;
-      margin-left: 2em;
-    }
+  .experience {
+    padding-inline-start: 10vw;
+  }
 
-    .experience {
-      padding-inline-start: 10vw;
-    }
+  .experience > li > ul {
+    padding-inline-start: 5vw;
+  }
 
-    .experience > li > ul {
-      padding-inline-start: 5vw;
-    }
+  /* Main area - Projects */
 
-    /* Main area - Projects */
+  .card {
+    width: 70%;
+    margin: 50px auto;
+  }
 
-    .card {
-      width: 70%;
-      margin: 50px auto;
-    }
+  #budding-more-info {
+    display: block;
+  }
 
-    #budding-more-info {
-      display: block;
-    }
+  #budding-more-info > p {
+    padding: 0;
+  }
 
-    #budding-more-info > p {
-      padding: 0;
-    }
+  .project-links,
+  .project-links > a {
+    display: block;
+    text-align: center;
+  }
 
-    .project-links,
-    .project-links > a {
-      display: block;
-      text-align: center;
-    }
+  .mobile-gif {
+    width: 40vw;
+    margin: auto;
+    margin-top: 4ch;
+    margin-bottom: 4ch;
+  }
 
-    .mobile-gif {
-      width: 40vw;
-      margin: auto;
-      margin-top: 4ch;
-      margin-bottom: 4ch;
-    }
+  .desktop-gif {
+    width: 100%;
+  }
 
-    .desktop-gif {
-      width: 100%;
-    }
+  .desktop-demo-card {
+    height: 30vh;
+  }
 
-    .desktop-demo-card {
-      height: 30vh;
-    }
+  /* Main area - Blog */
 
-    /* Main area - Blog */
+  .articles {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    grid-gap: 2ch;
+  }
 
-    .articles {
-      grid-template-columns: 1fr 1fr;
-      width: 100%;
-      grid-gap: 2ch;
-    }
+  /* Main area - Contact */
 
-    /* Main area - Contacts */
+  #contact > section > p {
+    text-align: center;
+  }
 
-    .logo {
-      height: 4rem;
-    }
+  #fixed-social-logos {
+    display: none;
+  }
 
-    form {
-      width: 60%;
-    }
+  #contact-social-logos {
+    display: flex;
+    margin: 4rem 0;
+    padding: 0 15%;
+    justify-content: space-between;
+  }
+  .logo {
+    height: 4rem;
+  }
 
-    form.card {
-      margin: 0;
-      margin-right: 0;
-      margin-top: 0;
-    }
+  form.card {
+    margin: 0;
+    margin-right: 0;
+    margin-top: 0;
+  }
 
-    .twitter-border {
-      margin: auto;
-      margin-bottom: 10vh;
-    }
+  form.shadow-card {
+    padding-top: 7%;
+    padding-bottom: 3%;
+  }
 
-    form {
-      margin: auto;
-      margin-top: 3ch;
-      padding-top: 10%;
-      padding-bottom: 10%;
-    }
-
-    .contact-form-heading {
-      margin-left: 0;
-    }
-
-    /* Main area - Contact */
-
-    #contact > section > p {
-      text-align: center;
-    }
-
-    #float-social-logos {
-      display: none;
-    }
-
-    #contact-social-logos {
-      display: flex;
-      margin: 40px 0;
-      padding: 0 15%;
-      justify-content: space-between;
-    }
-
-    form {
-      margin: auto;
-    }
-
-    form.shadow-card {
-      padding-top: 7%;
-      padding-bottom: 3%;
-    }
+  form {
+    width: 60%;
+    margin: auto;
+    margin-top: 3ch;
+    padding-top: 10%;
+    padding-bottom: 10%;
   }
 
   /* Footer */
 
   footer {
     display: block;
-    padding-bottom: 30px;
+    padding-bottom: 3rem;
     width: 100%;
   }
 
@@ -769,7 +727,7 @@ footer > p > a {
     z-index: 99;
     border-radius: 50%;
     outline: none;
-    background-color: #03a090;
+    background-color: #eb4034;
     color: white;
     cursor: pointer;
     font-size: 2.5rem;
@@ -777,11 +735,12 @@ footer > p > a {
 
   #scroll-top-button:hover,
   #scroll-top-button:focus {
-    background-color: #b21f66;
+    background-color: #381460;
   }
 }
 
 @media (max-width: 800px) {
+  /* Main area - About */
   .photo-small-screen {
     width: 30%;
   }
@@ -802,16 +761,13 @@ footer > p > a {
 
   nav > a {
     margin-bottom: 2%;
+    display: block;
+    width: auto;
+    border: none;
   }
 
   #side-section {
     flex-wrap: wrap;
-  }
-
-  nav > a {
-    display: block;
-    width: auto;
-    border: none;
   }
 
   .focused-section-link {
