--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* Global styles */
 @font-face {
   font-family: "Bubbleboddy Light";
-  src: url("./assets/bubbleboddy/Bubbleboddy-Regular.ttf")
+  src: url("../assets/fonts/Bubbleboddy-Regular.ttf")
     format("truetype");
 }
 
@@ -133,7 +133,7 @@ nav > a:focus {
 
 #fixed-social-logos > a {
   display: block;
-  margin: 5ch;
+  margin: 4ch;
 }
 
 .section {
@@ -731,6 +731,7 @@ footer > p > a {
     color: white;
     cursor: pointer;
     font-size: 2.5rem;
+    padding: 0px;
   }
 
   #scroll-top-button:hover,
