Update form to clear input on submit and add Message submitted below submit button

--- a/src/index.css
+++ b/src/index.css
@@ -431,6 +431,11 @@ textarea {
   text-align: left;
 }
 
+#submitted-message {
+  display: none;
+  text-align: center;
+}
+
 form button {
   background-color: #381460;
   padding: 2rem;
