--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 p {
-  text-align: justify;
+  text-align: left;
   width: 95%;
 }
 
@@ -107,6 +107,10 @@ nav {
   font-family: "Asap", sans-serif;
   font-weight: 700;
   padding-top: 10%;
+}
+
+nav > h2 {
+  font-size: 3rem;
 }
 
 #nav-box {
@@ -276,6 +280,14 @@ ul.accordion {
   padding-bottom: 1rem;
 }
 
+.project {
+  border: solid 0.15rem #381460;
+  border-radius: 0.5rem;
+  margin-bottom: 3rem;
+  padding: 1rem;
+  padding-top: 0;
+}
+
 ul.project-tech li {
   display: inline;
   font-size: 2rem;
@@ -335,10 +347,6 @@ button:hover {
   margin-bottom: 4ch;
   margin-left: 4ch;
   align-self: center;
-}
-
-#budding-more-info {
-  display: flex;
 }
 
 .project-links > a {
